--- a/src/builder/pages/form-builder/FormBuilder.scss
+++ b/src/builder/pages/form-builder/FormBuilder.scss
@@ -177,7 +177,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 968px) {
     .navbar {
         position: absolute;
         right: 0;
